--- a/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
@@ -112,7 +112,7 @@
                 <br></br>
                 <br></br>
                 <h3 style="margin-top: 0">Terms and Conditions</h3>
-                <p>Please enter quotation terms and Conditions below</p>
+                <p>Please enter invoice terms and Conditions below</p>
                 <p:inputTextarea rows="10" cols="80" value="#{generateInvoiceManagedBean.inputText}" />
                 <h:outputText id="display" />
                 <br></br>
