link quotation to po, cancel po-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/allpo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/allpo.xhtml
@@ -183,26 +183,35 @@
                                 <p:outputLabel for="userIDTemp"  value="User ID to access to Supplier's OES: " />
                             </p:column>
                             <p:column>
-                                <p:inputText id="userIDTemp" value="#{mrpPurchaseOrderManagedBean.userIDTemp}"  label="userID"></p:inputText>
+                                <p:inputText id="userIDTemp" required="true" requiredMessage="User Login Email Address to Supplier's OES is required." value="#{mrpPurchaseOrderManagedBean.userIDTemp}"  label="userID"></p:inputText>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column>
                                 <p:outputLabel for="password"  value="Password: " />
                             </p:column>
+                        </p:row>
+                        <p:row>
                             <p:column>
-                                <p:inputText id="password" value="#{mrpPurchaseOrderManagedBean.password}"  label="password"></p:inputText>
-                            </p:column>
-                            <p:column>
-                                <p:inputText id="poReference" value="#{mrpPurchaseOrderManagedBean.poReference}"  label="poReference"></p:inputText>
+                                <p:inputText id="password" value="#{mrpPurchaseOrderManagedBean.password}" required="true" requiredMessage="Password is required." label="password"></p:inputText>
                             </p:column>
                         </p:row>
-                        <p:commandButton value="Submit ID to Send" actionListener="#{mrpPurchaseOrderManagedBean.sendPO}" update="growl"></p:commandButton>
-
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="poReference"  value="Please Enter PO Reference ID (Same as the PO reference ID as shown above: " />
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:inputText id="poReference" value="#{mrpPurchaseOrderManagedBean.poReference}"  required="true" requiredMessage="PO reference ID is required." label="poReference"></p:inputText>
+                            </p:column>
+                        </p:row>
+                        <p:commandButton value="Submit ID to Send PO" actionListener="#{mrpPurchaseOrderManagedBean.sendPO}" update="growl"></p:commandButton>
+                       <p:commandButton value="Cancel on submitting this PO" actionListener="#{mrpPurchaseOrderManagedBean.cancelPO}" update="growl"></p:commandButton>
 
                     </p:dataGrid>
-                    <p:commandButton value="Send PO and Complete MRP"  action="#{mrpPurchaseOrderManagedBean.backToMrpHome}" />
-                    <p:commandButton value="Cancel"  action="#{mrpPurchaseOrderManagedBean.cancelPO}" />
+                    <p:commandButton value="Finish and Go Back"  action="#{mrpPurchaseOrderManagedBean.backToMrpHome}" />
+        
                 </p:panel>
 
 
