--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecast.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecast.xhtml
@@ -37,15 +37,19 @@
                     </p:submenu>
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
-                <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                    <p:submenu label="MRP">
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="MRP Home" url="mrp.xhtml" />
+                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+            </p:breadCrumb>
             <h:form>
                 <p:panel header="Select a Product for Forecasting" style="margin-bottom:10px;">
                     <h:panelGrid columns="4" cellpadding="5">
