--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastviewhistory.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastviewhistory.xhtml
@@ -37,14 +37,18 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="MRP Home" url="mrp.xhtml" />
+                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+            </p:breadCrumb>
             <h:form>
                 <p:panel header="View Sales History in the past 24 months" style="margin-bottom:10px;">
                     <p:chart type="line" model="#{forecastShowHistoryManagedBean.purchaseHistory}" style="height:300px" />
