--- a/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mps.xhtml
@@ -47,6 +47,10 @@
         </ui:define>
 
         <ui:define name="right">
+                <p:breadCrumb>
+                <p:menuitem value="MRP Home" url="mrp.xhtml" />
+                <p:menuitem value="MRP Process" url="forecast.xhtml" />
+            </p:breadCrumb>
             <h:form>
                 <p:panel header="Enter Buffer If Necessary" style="margin-bottom:10px;">
                     <p:panelGrid style="margin-top:20px">
