--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -48,6 +48,9 @@
         </ui:define>
 
         <ui:define name="right">
+                <p:breadCrumb>
+                <p:menuitem value="MRP Home" url="mrp.xhtml" />
+            </p:breadCrumb>
             <div class="system-banner mrp-system-banner"></div>
             <h2 class="system-welcome">Welcome to MRP II system!</h2>
 
