--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
@@ -47,6 +47,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="MRP Home" url="mrp.xhtml" />
+                <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel header="Select a product for viewing BOM" style="margin-bottom:10px;">
                     <h:panelGrid columns="4" cellpadding="5">
